[package]
name = "embassy_rp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embassy_rp"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
skip-cyw43-firmware = []
bluetooth = []

[dependencies]
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-net = { version = "0.6.0", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0"}
embassy-usb-logger = { version = "0.4.0"}
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }



panic-probe = { version = "0.3.2", features = ["print-defmt"] }

portable-atomic = { version = "1.5", features = ["critical-section"] }

static_cell = "2.1"

cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"

log = { version = "0.4" }

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = 'z'
